test/e2e/pass/001-assignment/input.tjs
let x = 5;
let y: Int = 5;
let mut z = 5;

print(x);
print(y);
print(z);
