test/e2e/fail/014-unknown-enum/input.tjs
let y = Option::Some(1);
